# python-markdown-full-yaml-metadata

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .travis.yml  LICENSE  Makefile  README.md  README.rst  full_yaml_metadata.py  markdown_full_yaml_metadata.py  pyproject.toml  requirements.txt  setup.py  shell.nix  tests.py  tox.ini
.github/workflows/: publish.yml  test.yml
tests/: test_loaders.py  test_metadata_parsing.py
